k8s_yamls/ingress/cis_app_ingress/echo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: echo
  namespace: baselab
  annotations:
    virtual-server.f5.com/partition: "baselab"
    virtual-server.f5.com/ip: 10.1.10.39
    virtual-server.f5.com/http-port: "80"
    virtual-server.f5.com/ssl-redirect: "true"
    virtual-server.f5.com/balance: "round-robin"
    virtual-server.f5.com/health: |
      [
        {
          "path":     "echo.example.com/",
          "send":     "GET / HTTP/1.1\r\nHost: echo.example.com",
          "interval": 5,
          "timeout":  10
        }
      ]
spec:
  # Provide the IngressClassName as "f5"
  ingressClassName: f5
  tls:
  - hosts:
    - "echo.example.com"
    #Referencing this secret in an Ingress tells the Ingress controller to 
    #secure the channel from the client to the load balancer using TLS
    secretName: pcl-tls-secret
  rules:
  - host: "echo.example.com"
    http:
    # path to Service from URL
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echoserver
            port:
              number: 80
